--- a/Client/Pages/Home/home.html
+++ b/Client/Pages/Home/home.html
@@ -4,26 +4,39 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link
+      href="https://db.onlinewebfonts.com/c/29eee6d957e73039264c9de9fd949d20?family=Flame+Sans"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./../../SCSS/main.css" />
   </head>
   <body>
     <header>
       <div class="navbar">
-        <a class="burgermenu" href="">
-          <img src="./../../Assets/Icons/burger-bar.png" alt="" />
-        </a>
-        <a class="logo" href="">
-          <img src="./../../Assets/Icons/burger-king.png" alt="" />
-        </a>
-        <div class="buttons">
-          <a class="account" href="">
-            <button>Sign Up/Sing In</button>
+        <div class="top">
+          <a class="burgermenu" href="">
+            <img src="./../../Assets/Icons/burger-bar.png" alt="" />
           </a>
-          <a class="basket" href="">
-            <button>
-              <img src="./../../Assets/Icons/basket.png" alt="" />
-              $0.00
-            </button>
+          <a class="logo" href="">
+            <img src="./../../Assets/Icons/burger-king.png" alt="" />
+          </a>
+          <div class="buttons">
+            <a class="account" href="">
+              <button>Sign Up/Sing In</button>
+            </a>
+            <a class="basket" href="">
+              <button>
+                <img src="./../../Assets/Icons/basket.png" alt="" />
+                $0.00
+              </button>
+            </a>
+          </div>
+        </div>
+        <div class="bottom">
+          <a href="">
+            <img src="../../Assets/Icons/map.png" alt="" />
+            <span>For availability</span>
+            <span>Choose location</span>
           </a>
         </div>
       </div>
