--- a/Client/Pages/Home/home.html
+++ b/Client/Pages/Home/home.html
@@ -8,6 +8,10 @@
       href="https://db.onlinewebfonts.com/c/29eee6d957e73039264c9de9fd949d20?family=Flame+Sans"
       rel="stylesheet"
     />
+    <link
+      href="https://db.onlinewebfonts.com/c/565a681be0eb6f1d92c6bc57c629ea35?family=Flame+Bold"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./../../SCSS/main.css" />
   </head>
   <body>
@@ -41,5 +45,121 @@
         </div>
       </div>
     </header>
+    <section class="order">
+      <div class="main-section">
+        <div class="left">
+          <span>Start your BK® order.</span>
+          <a class="pickup" href="">
+            <button>
+              <img src="../../Assets/Icons/cart.png" alt="" />
+              Order Pickup
+            </button>
+          </a>
+          <a class="delivery" href="">
+            <button>
+              <img src="../../Assets/Icons/delivery-bike.png" alt="" />
+              Order Delivery
+            </button>
+          </a>
+        </div>
+        <div class="right">
+          <img src="../../Assets/Icons/home-gif.gif" alt="" />
+        </div>
+      </div>
+    </section>
+    <section class="cards">
+      <div class="card">
+        <div class="top">
+          <a href="">
+            <img src="../../Assets/Images/card-1.png" alt="" />
+          </a>
+        </div>
+        <div class="bottom">
+          <div class="info">
+            <h4>This $5 Duo deal is a steal!</h4>
+            <span
+              >Two of our most popular items—together for just $5! Mix and match
+              any two from the Whopper® Jr. or BK® Royal Crispy Wraps. So many
+              delicious combinations are waiting to happen! Order your $5 Duo
+              your way in the BK® App.</span
+            >
+            <a href="">See Terms.</a>
+          </div>
+          <div class="button">
+            <a href="">
+              <button>Order Now</button>
+            </a>
+          </div>
+        </div>
+      </div>
+      <div class="card">
+        <div class="top">
+          <a href="">
+            <img src="../../Assets/Images/card-2.png" alt="" />
+          </a>
+        </div>
+        <div class="bottom">
+          <div class="info">
+            <h4>Whopper® made your way</h4>
+            <span
+              >There are over 200,000 ways to have a Whopper® your way. And each
+              one rules, just like you.</span
+            >
+            <a href="">See Terms.</a>
+          </div>
+          <div class="button">
+            <a href="">
+              <button>Order Now</button>
+            </a>
+          </div>
+        </div>
+      </div>
+      <div class="card">
+        <div class="top">
+          <a href="">
+            <img src="../../Assets/Images/card-3.png" alt="" />
+          </a>
+        </div>
+        <div class="bottom">
+          <div class="info">
+            <h4>$3 OFF any $20+ BK® delivery order!</h4>
+            <span
+              >Save time and money with $3 OFF any $20+ BK® delivery order. Now
+              through 2/29! At part. U.S. rest. Fees and higher prices
+              apply..</span
+            >
+            <a href="">See Terms.</a>
+          </div>
+          <div class="button">
+            <a href="">
+              <button>Order Now</button>
+            </a>
+          </div>
+        </div>
+      </div>
+      <div class="card">
+        <div class="top">
+          <a href="">
+            <img src="../../Assets/Images/card-4.png" alt="" />
+          </a>
+        </div>
+        <div class="bottom">
+          <div class="info">
+            <h4>You could win $1 million!</h4>
+            <span
+              >Enter the Million Dollar Whopper® Contest for your chance to win
+              $1 million.* How you top it is up to you. PLUS your first entry
+              earns you a FREE Whopper® with $1+ purchase!</span
+            >
+            <a href="">See Terms.</a>
+          </div>
+          <div class="button">
+            <a href="">
+              <button>Order Now</button>
+            </a>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
