Cards and Ads section complated

--- a/Client/Pages/Home/home.html
+++ b/Client/Pages/Home/home.html
@@ -161,5 +161,31 @@
         </div>
       </div>
     </section>
+    <section class="ads">
+      <div class="ad">
+        <div class="left">
+          <img src="../../Assets/Images/phone-ads.png" alt="" />
+        </div>  
+        <div class="right">
+          <h4>
+            Save $$$   <br>
+            With offers on demand</h4>
+          <div class="link">
+            <a  class="appstore" href="">
+              <img src="../../Assets/Images/PlayStore.png" alt="" />
+            </a>
+            <a class="playstore" href="">
+              <img src="../../Assets/Images/download.png" alt="" />
+            </a>
+          </div>
+          <span
+            >Apple and the Apple logo are trademarks of Apple Inc., registered
+            in the U.S. and other countries. App Store is a service mark of
+            Apple Inc. Google Play is a trademark of Google Inc. Terms
+            apply.</span
+          >
+        </div>
+      </div>
+    </section>
   </body>
 </html>
