--- a/Client/Pages/Home/home.html
+++ b/Client/Pages/Home/home.html
@@ -187,5 +187,12 @@
         </div>
       </div>
     </section>
+    <section class="terms">
+      <div class="term">
+        <span>TM & Copyright 2024 Burger King Company LLC. All Rights Reserved. I
+          <a href="">Do Not Sell Or Share My Personal Information</a>
+        </span>
+      </div>
+    </section>
   </body>
 </html>
