--- a/Client/Pages/Home/home.html
+++ b/Client/Pages/Home/home.html
@@ -194,5 +194,44 @@
         </span>
       </div>
     </section>
+    <footer>
+      <div class="footer">
+        <div>
+          <a href="">
+
+            <img src="../../Assets/Icons/home.png" alt="">
+            <span>Home</span>
+          </a>
+        </div>
+        <div>
+          <a href="">
+
+            <img src="../../Assets/Icons/menu.png" alt="">
+            <span>Menu</span>
+          </a>
+        </div>
+        <div>
+          <a href="">
+
+            <img src="../../Assets/Icons/barcode.png" alt="">
+            <span>My Code</span>
+          </a>
+        </div>
+        <div>
+          <a href="">
+
+            <img src="../../Assets/Icons/discount.png" alt="">
+            <span>Offers</span>
+          </a>
+        </div>
+        <div>
+          <a href="">
+
+            <img src="../../Assets/Icons/badge.png" alt="">
+            <span>Rewards</span>
+          </a>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
