--- a/Client/Pages/Home/home.html
+++ b/Client/Pages/Home/home.html
@@ -165,13 +165,14 @@
       <div class="ad">
         <div class="left">
           <img src="../../Assets/Images/phone-ads.png" alt="" />
-        </div>  
+        </div>
         <div class="right">
           <h4>
-            Save $$$   <br>
-            With offers on demand</h4>
+            Save $$$ <br />
+            With offers on demand
+          </h4>
           <div class="link">
-            <a  class="appstore" href="">
+            <a class="appstore" href="">
               <img src="../../Assets/Images/PlayStore.png" alt="" />
             </a>
             <a class="playstore" href="">
@@ -189,7 +190,8 @@
     </section>
     <section class="terms">
       <div class="term">
-        <span>TM & Copyright 2024 Burger King Company LLC. All Rights Reserved. I
+        <span
+          >TM & Copyright 2024 Burger King Company LLC. All Rights Reserved. I
           <a href="">Do Not Sell Or Share My Personal Information</a>
         </span>
       </div>
@@ -198,36 +200,31 @@
       <div class="footer">
         <div>
           <a href="">
-
-            <img src="../../Assets/Icons/home.png" alt="">
+            <img src="../../Assets/Icons/home.png" alt="" />
             <span>Home</span>
           </a>
         </div>
         <div>
           <a href="">
-
-            <img src="../../Assets/Icons/menu.png" alt="">
+            <img src="../../Assets/Icons/menu.png" alt="" />
             <span>Menu</span>
           </a>
         </div>
         <div>
           <a href="">
-
-            <img src="../../Assets/Icons/barcode.png" alt="">
+            <img src="../../Assets/Icons/barcode.png" alt="" />
             <span>My Code</span>
           </a>
         </div>
         <div>
           <a href="">
-
-            <img src="../../Assets/Icons/discount.png" alt="">
+            <img src="../../Assets/Icons/discount.png" alt="" />
             <span>Offers</span>
           </a>
         </div>
         <div>
           <a href="">
-
-            <img src="../../Assets/Icons/badge.png" alt="">
+            <img src="../../Assets/Icons/badge.png" alt="" />
             <span>Rewards</span>
           </a>
         </div>
