--- a/Client/Pages/Locations/location.html
+++ b/Client/Pages/Locations/location.html
@@ -42,5 +42,194 @@
         </div>
       </div>
     </section>
+    <section class="locations">
+      <div class="top">
+        <button class="nearby active">Nearby</button>
+        <button class="favorites ">Favorites</button>
+        <button class="recents ">Recents</button>
+      </div>
+      <div class="bottom">
+        <div class="location">
+          <div class="left">
+            <h1>500 Lyons Avenue</h1>
+            <div class="mid">
+              <span class="distance">3 km</span>
+              <span class="work">~Open</span>
+            </div>
+            <div class="functionality">
+              <span>Drive Thru</span>
+              <span>Take Out</span>
+              <span>Eat In</span>
+            </div>
+          </div>
+          <div class="right">
+            <button>
+              <img  class="active" src="../../Assets/Icons/heart.png" alt="">
+              <img  src="../../Assets/Icons/heart-red.png" alt="">
+            </button>
+          </div>
+        </div>
+        <div class="location">
+          <div class="left">
+            <h1>500 Lyons Avenue</h1>
+            <div class="mid">
+              <span class="distance">3 km</span>
+              <span class="work">~Open</span>
+            </div>
+            <div class="functionality">
+              <span>Drive Thru</span>
+              <span>Take Out</span>
+              <span>Eat In</span>
+            </div>
+          </div>
+          <div class="right">
+            <button>
+              <img  class="active" src="../../Assets/Icons/heart.png" alt="">
+              <img  src="../../Assets/Icons/heart-red.png" alt="">
+            </button>
+          </div>
+        </div>
+        <div class="location">
+          <div class="left">
+            <h1>500 Lyons Avenue</h1>
+            <div class="mid">
+              <span class="distance">3 km</span>
+              <span class="work">~Open</span>
+            </div>
+            <div class="functionality">
+              <span>Drive Thru</span>
+              <span>Take Out</span>
+              <span>Eat In</span>
+            </div>
+          </div>
+          <div class="right">
+            <button>
+              <img  class="active" src="../../Assets/Icons/heart.png" alt="">
+              <img  src="../../Assets/Icons/heart-red.png" alt="">
+            </button>
+          </div>
+        </div>
+        <div class="location">
+          <div class="left">
+            <h1>500 Lyons Avenue</h1>
+            <div class="mid">
+              <span class="distance">3 km</span>
+              <span class="work">~Open</span>
+            </div>
+            <div class="functionality">
+              <span>Drive Thru</span>
+              <span>Take Out</span>
+              <span>Eat In</span>
+            </div>
+          </div>
+          <div class="right">
+            <button>
+              <img  class="active" src="../../Assets/Icons/heart.png" alt="">
+              <img  src="../../Assets/Icons/heart-red.png" alt="">
+            </button>
+          </div>
+        </div>
+        <div class="location">
+          <div class="left">
+            <h1>500 Lyons Avenue</h1>
+            <div class="mid">
+              <span class="distance">3 km</span>
+              <span class="work">~Open</span>
+            </div>
+            <div class="functionality">
+              <span>Drive Thru</span>
+              <span>Take Out</span>
+              <span>Eat In</span>
+            </div>
+          </div>
+          <div class="right">
+            <button>
+              <img  class="active" src="../../Assets/Icons/heart.png" alt="">
+              <img  src="../../Assets/Icons/heart-red.png" alt="">
+            </button>
+          </div>
+        </div>
+        <div class="location">
+          <div class="left">
+            <h1>500 Lyons Avenue</h1>
+            <div class="mid">
+              <span class="distance">3 km</span>
+              <span class="work">~Open</span>
+            </div>
+            <div class="functionality">
+              <span>Drive Thru</span>
+              <span>Take Out</span>
+              <span>Eat In</span>
+            </div>
+          </div>
+          <div class="right">
+            <button>
+              <img  class="active" src="../../Assets/Icons/heart.png" alt="">
+              <img  src="../../Assets/Icons/heart-red.png" alt="">
+            </button>
+          </div>
+        </div>
+        <div class="location">
+          <div class="left">
+            <h1>500 Lyons Avenue</h1>
+            <div class="mid">
+              <span class="distance">3 km</span>
+              <span class="work">~Open</span>
+            </div>
+            <div class="functionality">
+              <span>Drive Thru</span>
+              <span>Take Out</span>
+              <span>Eat In</span>
+            </div>
+          </div>
+          <div class="right">
+            <button>
+              <img  class="active" src="../../Assets/Icons/heart.png" alt="">
+              <img  src="../../Assets/Icons/heart-red.png" alt="">
+            </button>
+          </div>
+        </div>
+        <div class="location">
+          <div class="left">
+            <h1>500 Lyons Avenue</h1>
+            <div class="mid">
+              <span class="distance">3 km</span>
+              <span class="work">~Open</span>
+            </div>
+            <div class="functionality">
+              <span>Drive Thru</span>
+              <span>Take Out</span>
+              <span>Eat In</span>
+            </div>
+          </div>
+          <div class="right">
+            <button>
+              <img  class="active" src="../../Assets/Icons/heart.png" alt="">
+              <img  src="../../Assets/Icons/heart-red.png" alt="">
+            </button>
+          </div>
+        </div>
+        <div class="location">
+          <div class="left">
+            <h1>500 Lyons Avenue</h1>
+            <div class="mid">
+              <span class="distance">3 km</span>
+              <span class="work">~Open</span>
+            </div>
+            <div class="functionality">
+              <span>Drive Thru</span>
+              <span>Take Out</span>
+              <span>Eat In</span>
+            </div>
+          </div>
+          <div class="right">
+            <button>
+              <img  class="active" src="../../Assets/Icons/heart.png" alt="">
+              <img  src="../../Assets/Icons/heart-red.png" alt="">
+            </button>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
