Sign In/Sign Up pages completed

--- a/Client/Pages/Home/home.html
+++ b/Client/Pages/Home/home.html
@@ -21,14 +21,14 @@
           <a class="burgermenu" href="">
             <img src="./../../Assets/Icons/burger-bar.png" alt="" />
           </a>
-          <a class="logo" href="">
+          <a class="logo" href="./home.html">
             <img src="./../../Assets/Icons/burger-king.png" alt="" />
           </a>
           <div class="buttons">
-            <a class="account" href="">
+            <a class="account" href="../Sign-Up/signup.html ">
               <button>Sign Up/Sing In</button>
             </a>
-            <a class="basket" href="">
+            <a class="basket" href="../Sign-Up/signup.html">
               <button>
                 <img src="./../../Assets/Icons/basket.png" alt="" />
                 $0.00
@@ -37,7 +37,7 @@
           </div>
         </div>
         <div class="bottom">
-          <a href="">
+          <a href="../Locations/location.html">
             <img src="../../Assets/Icons/map.png" alt="" />
             <span>For availability</span>
             <span>Choose location</span>
@@ -49,13 +49,13 @@
       <div class="main-section">
         <div class="left">
           <span>Start your BK® order.</span>
-          <a class="pickup" href="">
+          <a class="pickup" href="../Locations/location.html">
             <button>
               <img src="../../Assets/Icons/cart.png" alt="" />
               Order Pickup
             </button>
           </a>
-          <a class="delivery" href="">
+          <a class="delivery" href="../Delivery/delivery.html">
             <button>
               <img src="../../Assets/Icons/delivery-bike.png" alt="" />
               Order Delivery
@@ -70,7 +70,7 @@
     <section class="cards">
       <div class="card">
         <div class="top">
-          <a href="">
+          <a href="../Locations/location.html">
             <img src="../../Assets/Images/card-1.png" alt="" />
           </a>
         </div>
@@ -86,7 +86,7 @@
             <a href="">See Terms.</a>
           </div>
           <div class="button">
-            <a href="">
+            <a href="../Locations/location.html">
               <button>Order Now</button>
             </a>
           </div>
@@ -94,7 +94,7 @@
       </div>
       <div class="card">
         <div class="top">
-          <a href="">
+          <a href="../Locations/location.html">
             <img src="../../Assets/Images/card-2.png" alt="" />
           </a>
         </div>
@@ -108,7 +108,7 @@
             <a href="">See Terms.</a>
           </div>
           <div class="button">
-            <a href="">
+            <a href="../Locations/location.html">
               <button>Order Now</button>
             </a>
           </div>
@@ -116,7 +116,7 @@
       </div>
       <div class="card">
         <div class="top">
-          <a href="">
+          <a href="../Locations/location.html">
             <img src="../../Assets/Images/card-3.png" alt="" />
           </a>
         </div>
@@ -131,7 +131,7 @@
             <a href="">See Terms.</a>
           </div>
           <div class="button">
-            <a href="">
+            <a href="../Locations/location.html">
               <button>Order Now</button>
             </a>
           </div>
@@ -139,7 +139,7 @@
       </div>
       <div class="card">
         <div class="top">
-          <a href="">
+          <a href="../Locations/location.html">
             <img src="../../Assets/Images/card-4.png" alt="" />
           </a>
         </div>
@@ -154,7 +154,7 @@
             <a href="">See Terms.</a>
           </div>
           <div class="button">
-            <a href="">
+            <a href="../Locations/location.html">
               <button>Order Now</button>
             </a>
           </div>
@@ -199,13 +199,13 @@
     <footer>
       <div class="footer">
         <div>
-          <a href="">
+          <a href="./home.html">
             <img src="../../Assets/Icons/home.png" alt="" />
             <span>Home</span>
           </a>
         </div>
         <div>
-          <a href="">
+          <a href="../Locations/location.html">
             <img src="../../Assets/Icons/menu.png" alt="" />
             <span>Menu</span>
           </a>
