--- a/Client/Pages/Locations/location.html
+++ b/Client/Pages/Locations/location.html
@@ -28,25 +28,23 @@
     <section class="selectors">
       <div class="selector">
         <div class="top">
-          <a class="pick-up" href="">
+          <a class="pick-up" href="./location.html">
             <button>Pick Up</button>
           </a>
-          <a class="delivery" href="">
+          <a class="delivery" href="../Delivery/delivery.html">
             <button>Delivery</button>
           </a>
         </div>
         <div class="bottom">
-            <input placeholder="Your Address" type="text">
-            
-            
+          <input placeholder="Your Address" type="text" />
         </div>
       </div>
     </section>
     <section class="locations">
       <div class="top">
         <button class="nearby active">Nearby</button>
-        <button class="favorites ">Favorites</button>
-        <button class="recents ">Recents</button>
+        <button class="favorites">Favorites</button>
+        <button class="recents">Recents</button>
       </div>
       <div class="bottom">
         <div class="location">
@@ -64,8 +62,8 @@
           </div>
           <div class="right">
             <button>
-              <img  class="active" src="../../Assets/Icons/heart.png" alt="">
-              <img  src="../../Assets/Icons/heart-red.png" alt="">
+              <img class="active" src="../../Assets/Icons/heart.png" alt="" />
+              <img src="../../Assets/Icons/heart-red.png" alt="" />
             </button>
           </div>
         </div>
@@ -84,8 +82,8 @@
           </div>
           <div class="right">
             <button>
-              <img  class="active" src="../../Assets/Icons/heart.png" alt="">
-              <img  src="../../Assets/Icons/heart-red.png" alt="">
+              <img class="active" src="../../Assets/Icons/heart.png" alt="" />
+              <img src="../../Assets/Icons/heart-red.png" alt="" />
             </button>
           </div>
         </div>
@@ -104,8 +102,8 @@
           </div>
           <div class="right">
             <button>
-              <img  class="active" src="../../Assets/Icons/heart.png" alt="">
-              <img  src="../../Assets/Icons/heart-red.png" alt="">
+              <img class="active" src="../../Assets/Icons/heart.png" alt="" />
+              <img src="../../Assets/Icons/heart-red.png" alt="" />
             </button>
           </div>
         </div>
@@ -124,8 +122,8 @@
           </div>
           <div class="right">
             <button>
-              <img  class="active" src="../../Assets/Icons/heart.png" alt="">
-              <img  src="../../Assets/Icons/heart-red.png" alt="">
+              <img class="active" src="../../Assets/Icons/heart.png" alt="" />
+              <img src="../../Assets/Icons/heart-red.png" alt="" />
             </button>
           </div>
         </div>
@@ -144,8 +142,8 @@
           </div>
           <div class="right">
             <button>
-              <img  class="active" src="../../Assets/Icons/heart.png" alt="">
-              <img  src="../../Assets/Icons/heart-red.png" alt="">
+              <img class="active" src="../../Assets/Icons/heart.png" alt="" />
+              <img src="../../Assets/Icons/heart-red.png" alt="" />
             </button>
           </div>
         </div>
@@ -164,8 +162,8 @@
           </div>
           <div class="right">
             <button>
-              <img  class="active" src="../../Assets/Icons/heart.png" alt="">
-              <img  src="../../Assets/Icons/heart-red.png" alt="">
+              <img class="active" src="../../Assets/Icons/heart.png" alt="" />
+              <img src="../../Assets/Icons/heart-red.png" alt="" />
             </button>
           </div>
         </div>
@@ -184,8 +182,8 @@
           </div>
           <div class="right">
             <button>
-              <img  class="active" src="../../Assets/Icons/heart.png" alt="">
-              <img  src="../../Assets/Icons/heart-red.png" alt="">
+              <img class="active" src="../../Assets/Icons/heart.png" alt="" />
+              <img src="../../Assets/Icons/heart-red.png" alt="" />
             </button>
           </div>
         </div>
@@ -204,8 +202,8 @@
           </div>
           <div class="right">
             <button>
-              <img  class="active" src="../../Assets/Icons/heart.png" alt="">
-              <img  src="../../Assets/Icons/heart-red.png" alt="">
+              <img class="active" src="../../Assets/Icons/heart.png" alt="" />
+              <img src="../../Assets/Icons/heart-red.png" alt="" />
             </button>
           </div>
         </div>
@@ -224,12 +222,46 @@
           </div>
           <div class="right">
             <button>
-              <img  class="active" src="../../Assets/Icons/heart.png" alt="">
-              <img  src="../../Assets/Icons/heart-red.png" alt="">
+              <img class="active" src="../../Assets/Icons/heart.png" alt="" />
+              <img src="../../Assets/Icons/heart-red.png" alt="" />
             </button>
           </div>
         </div>
       </div>
     </section>
+    <footer>
+      <div class="footer">
+        <div>
+          <a href="../Home/home.html">
+            <img src="../../Assets/Icons/home.png" alt="" />
+            <span>Home</span>
+          </a>
+        </div>
+        <div>
+          <a href="../Locations/">
+            <img src="../../Assets/Icons/menu.png" alt="" />
+            <span>Menu</span>
+          </a>
+        </div>
+        <div>
+          <a href="">
+            <img src="../../Assets/Icons/barcode.png" alt="" />
+            <span>My Code</span>
+          </a>
+        </div>
+        <div>
+          <a href="">
+            <img src="../../Assets/Icons/discount.png" alt="" />
+            <span>Offers</span>
+          </a>
+        </div>
+        <div>
+          <a href="">
+            <img src="../../Assets/Icons/badge.png" alt="" />
+            <span>Rewards</span>
+          </a>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
