Full Menu added

--- a/Client/Pages/Menu/menu.html
+++ b/Client/Pages/Menu/menu.html
@@ -21,7 +21,7 @@
           <a class="burgermenu" href="">
             <img src="./../../Assets/Icons/burger-bar.png" alt="" />
           </a>
-          <a class="logo" href="./home.html">
+          <a class="logo" href="../Home/home.html">
             <img src="./../../Assets/Icons/burger-king.png" alt="" />
           </a>
           <div class="buttons">
@@ -46,10 +46,55 @@
       </div>
     </header>
     <div class="menu-navbar">
-      <div class="navbar-menu">Full Menu</div>
-      <div class="navbar-recents">Recents</div>
-      <div class="navbar-favorites">Favorites</div>
+      <a href="./menu.html">
+        <div class="navbar-menu">Full Menu</div>
+      </a>
+      <a href="">
+        <div class="navbar-recents">Recents</div>
+      </a>
+      <a href="">
+        <div class="navbar-favorites">Favorites</div>
+      </a>
     </div>
-    <section class="section-menu"></section>
+    <section class="section-menu">
+      <div class="cards">
+        <div class="eat-card">
+          <a href="">
+            <img src="../../Assets/Images/featured.png" alt="" />
+            <span>Featured</span>
+          </a>
+        </div>
+        <div class="eat-card">
+          <a href="">
+            <img src="../../Assets/Images/flame-grill=burger.png" alt="" />
+            <span>Flame Grill Burgers</span>
+          </a>
+        </div>
+        <div class="eat-card">
+          <a href="">
+            <img src="../../Assets/Images/chicken-fish.png" alt="" />
+            <span>Chicken & Fish</span>
+          </a>
+        </div>
+        <div class="eat-card">
+          <a href="">
+            <img src="../../Assets/Images/Sides.png" alt="" />
+            <span>Sides</span>
+          </a>
+        </div>
+        <div class="eat-card">
+          <a href="">
+            <img src="../../Assets/Images/drinks.png" alt="" />
+            <span>Drinks & Coffee</span>
+          </a>
+        </div>
+        <div class="eat-card">
+          <a href="">
+            <img src="../../Assets/Images/condiments.png" alt="" />
+            <span>Condiments</span>
+          </a>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
