--- a/Client/Pages/Locations/location.html
+++ b/Client/Pages/Locations/location.html
@@ -42,9 +42,16 @@
     </section>
     <section class="locations">
       <div class="top">
-        <button class="nearby active">Nearby</button>
-        <button class="favorites">Favorites</button>
-        <button class="recents">Recents</button>
+        <!-- without js in a tag -->
+        <a href="">
+          <button class="nearby active">Nearby</button>
+        </a>
+        <a href="">
+          <button class="favorites">Favorites</button>
+        </a>
+        <a href="">
+          <button class="recents">Recents</button>
+        </a>
       </div>
       <div class="bottom">
         <div class="location">
