Location page's javascript added

--- a/Client/Pages/Locations/location.html
+++ b/Client/Pages/Locations/location.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script defer src="./location.js"></script>
     <title>Document</title>
     <link
       href="https://db.onlinewebfonts.com/c/29eee6d957e73039264c9de9fd949d20?family=Flame+Sans"
@@ -55,183 +56,91 @@
       </div>
       <div class="bottom">
         <div class="location">
-          <div class="left">
-            <h1>500 Lyons Avenue</h1>
-            <div class="mid">
-              <span class="distance">3 km</span>
-              <span class="work">~Open</span>
+          <div class="location-top">
+            <div class="left">
+              <h1>500 Lyons Avenue</h1>
+              <div class="mid">
+                <span class="distance">3 km</span>
+                <span class="work">~Open</span>
+              </div>
+              <div class="functionality">
+                <span>Drive Thru</span>
+                <span>Take Out</span>
+                <span>Eat In</span>
+              </div>
             </div>
-            <div class="functionality">
-              <span>Drive Thru</span>
-              <span>Take Out</span>
-              <span>Eat In</span>
-            </div>
-          </div>
-          <div class="right">
-            <button>
-              <img class="active" src="../../Assets/Icons/heart.png" alt="" />
-              <img src="../../Assets/Icons/heart-red.png" alt="" />
-            </button>
-          </div>
-        </div>
-        <div class="location">
-          <div class="left">
-            <h1>500 Lyons Avenue</h1>
-            <div class="mid">
-              <span class="distance">3 km</span>
-              <span class="work">~Open</span>
-            </div>
-            <div class="functionality">
-              <span>Drive Thru</span>
-              <span>Take Out</span>
-              <span>Eat In</span>
+            <div class="right">
+                <button>
+                  <img class="active" src="../../Assets/Icons/heart.png" alt="" />
+                  <img src="../../Assets/Icons/heart-red.png" alt="" />
+                </button>
             </div>
           </div>
-          <div class="right">
-            <button>
-              <img class="active" src="../../Assets/Icons/heart.png" alt="" />
-              <img src="../../Assets/Icons/heart-red.png" alt="" />
-            </button>
-          </div>
-        </div>
-        <div class="location">
-          <div class="left">
-            <h1>500 Lyons Avenue</h1>
-            <div class="mid">
-              <span class="distance">3 km</span>
-              <span class="work">~Open</span>
+          <div class="location-bottom">
+            <div class="order-menu">
+              <a href="">
+                <button class="location-offers">
+                  <img src="../../Assets/Icons/information.png" alt="" />
+                </button>
+                <span>Info</span>
+              </a>
+              <a href="">
+                <button class="location-order">
+                  <img src="../../Assets/Icons/burger.png" alt="" />
+                </button>
+                <span>Order</span>
+              </a>
+              <a href="">
+                <button class="location-info">
+                  <img src="../../Assets/Icons/order.png" alt="" />
+                </button>
+                <span>Offers</span>
+              </a>
             </div>
-            <div class="functionality">
-              <span>Drive Thru</span>
-              <span>Take Out</span>
-              <span>Eat In</span>
-            </div>
-          </div>
-          <div class="right">
-            <button>
-              <img class="active" src="../../Assets/Icons/heart.png" alt="" />
-              <img src="../../Assets/Icons/heart-red.png" alt="" />
-            </button>
           </div>
         </div>
         <div class="location">
-          <div class="left">
-            <h1>500 Lyons Avenue</h1>
-            <div class="mid">
-              <span class="distance">3 km</span>
-              <span class="work">~Open</span>
+          <div class="location-top">
+            <div class="left">
+              <h1>500 Lyons Avenue</h1>
+              <div class="mid">
+                <span class="distance">3 km</span>
+                <span class="work">~Open</span>
+              </div>
+              <div class="functionality">
+                <span>Drive Thru</span>
+                <span>Take Out</span>
+                <span>Eat In</span>
+              </div>
             </div>
-            <div class="functionality">
-              <span>Drive Thru</span>
-              <span>Take Out</span>
-              <span>Eat In</span>
-            </div>
-          </div>
-          <div class="right">
-            <button>
-              <img class="active" src="../../Assets/Icons/heart.png" alt="" />
-              <img src="../../Assets/Icons/heart-red.png" alt="" />
-            </button>
-          </div>
-        </div>
-        <div class="location">
-          <div class="left">
-            <h1>500 Lyons Avenue</h1>
-            <div class="mid">
-              <span class="distance">3 km</span>
-              <span class="work">~Open</span>
-            </div>
-            <div class="functionality">
-              <span>Drive Thru</span>
-              <span>Take Out</span>
-              <span>Eat In</span>
+            <div class="right">
+                <button>
+                  <img class="active" src="../../Assets/Icons/heart.png" alt="" />
+                  <img src="../../Assets/Icons/heart-red.png" alt="" />
+                </button>
             </div>
           </div>
-          <div class="right">
-            <button>
-              <img class="active" src="../../Assets/Icons/heart.png" alt="" />
-              <img src="../../Assets/Icons/heart-red.png" alt="" />
-            </button>
-          </div>
-        </div>
-        <div class="location">
-          <div class="left">
-            <h1>500 Lyons Avenue</h1>
-            <div class="mid">
-              <span class="distance">3 km</span>
-              <span class="work">~Open</span>
+          <div class="location-bottom">
+            <div class="order-menu">
+              <a href="">
+                <button class="location-offers">
+                  <img src="../../Assets/Icons/information.png" alt="" />
+                </button>
+                <span>Info</span>
+              </a>
+              <a href="">
+                <button class="location-order">
+                  <img src="../../Assets/Icons/burger.png" alt="" />
+                </button>
+                <span>Order</span>
+              </a>
+              <a href="">
+                <button class="location-info">
+                  <img src="../../Assets/Icons/order.png" alt="" />
+                </button>
+                <span>Offers</span>
+              </a>
             </div>
-            <div class="functionality">
-              <span>Drive Thru</span>
-              <span>Take Out</span>
-              <span>Eat In</span>
-            </div>
-          </div>
-          <div class="right">
-            <button>
-              <img class="active" src="../../Assets/Icons/heart.png" alt="" />
-              <img src="../../Assets/Icons/heart-red.png" alt="" />
-            </button>
-          </div>
-        </div>
-        <div class="location">
-          <div class="left">
-            <h1>500 Lyons Avenue</h1>
-            <div class="mid">
-              <span class="distance">3 km</span>
-              <span class="work">~Open</span>
-            </div>
-            <div class="functionality">
-              <span>Drive Thru</span>
-              <span>Take Out</span>
-              <span>Eat In</span>
-            </div>
-          </div>
-          <div class="right">
-            <button>
-              <img class="active" src="../../Assets/Icons/heart.png" alt="" />
-              <img src="../../Assets/Icons/heart-red.png" alt="" />
-            </button>
-          </div>
-        </div>
-        <div class="location">
-          <div class="left">
-            <h1>500 Lyons Avenue</h1>
-            <div class="mid">
-              <span class="distance">3 km</span>
-              <span class="work">~Open</span>
-            </div>
-            <div class="functionality">
-              <span>Drive Thru</span>
-              <span>Take Out</span>
-              <span>Eat In</span>
-            </div>
-          </div>
-          <div class="right">
-            <button>
-              <img class="active" src="../../Assets/Icons/heart.png" alt="" />
-              <img src="../../Assets/Icons/heart-red.png" alt="" />
-            </button>
-          </div>
-        </div>
-        <div class="location">
-          <div class="left">
-            <h1>500 Lyons Avenue</h1>
-            <div class="mid">
-              <span class="distance">3 km</span>
-              <span class="work">~Open</span>
-            </div>
-            <div class="functionality">
-              <span>Drive Thru</span>
-              <span>Take Out</span>
-              <span>Eat In</span>
-            </div>
-          </div>
-          <div class="right">
-            <button>
-              <img class="active" src="../../Assets/Icons/heart.png" alt="" />
-              <img src="../../Assets/Icons/heart-red.png" alt="" />
-            </button>
           </div>
         </div>
       </div>
