Sticky Header and Stick Footer added

--- a/Client/Pages/Delivery/delivery.html
+++ b/Client/Pages/Delivery/delivery.html
@@ -15,7 +15,170 @@
     />
   </head>
   <body>
-    <header>
+    <div class="delivery-navbar">
+      <div class="nav">
+        <span>Delivery</span>
+        <a href="">
+          <button>
+            <img src="./../../Assets/Icons/location.png" alt="" />
+          </button>
+        </a>
+      </div>
+    </div>
+    <section class="selectors">
+      <div class="selector">
+        <div class="top">
+          <a class="pick-up" href="./location.html">
+            <button>Pick Up</button>
+          </a>
+          <a class="delivery" href="../Delivery/delivery.html">
+            <button>Delivery</button>
+          </a>
+        </div>
+        <div class="bottom">
+          <input placeholder="Your Address" type="text" />
+        </div>
+      </div>
+    </section>
+    <section class="locations">
+      <div class="top">
+        <!-- without js in a tag -->
+        <a href="">
+          <button class="nearby active">Nearby</button>
+        </a>
+        <a href="">
+          <button class="favorites">Favorites</button>
+        </a>
+        <a href="">
+          <button class="recents">Recents</button>
+        </a>
+      </div>
+      <div class="bottom">
+        <div class="location">
+          <div class="location-top">
+            <div class="left">
+              <h1>500 Lyons Avenue</h1>
+              <div class="mid">
+                <span class="distance">3 km</span>
+                <span class="work">~Open</span>
+              </div>
+              <div class="functionality">
+                <span>Drive Thru</span>
+                <span>Take Out</span>
+                <span>Eat In</span>
+              </div>
+            </div>
+            <div class="right">
+              <button>
+                <img class="active" src="../../Assets/Icons/heart.png" alt="" />
+                <img src="../../Assets/Icons/heart-red.png" alt="" />
+              </button>
+            </div>
+          </div>
+          <div class="location-bottom">
+            <div class="order-menu">
+              <a href="">
+                <button class="location-offers">
+                  <img src="../../Assets/Icons/information.png" alt="" />
+                </button>
+                <span>Info</span>
+              </a>
+              <a href="">
+                <button class="location-order">
+                  <img src="../../Assets/Icons/burger.png" alt="" />
+                </button>
+                <span>Order</span>
+              </a>
+              <a href="">
+                <button class="location-info">
+                  <img src="../../Assets/Icons/order.png" alt="" />
+                </button>
+                <span>Offers</span>
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="location">
+          <div class="location-top">
+            <div class="left">
+              <h1>500 Lyons Avenue</h1>
+              <div class="mid">
+                <span class="distance">3 km</span>
+                <span class="work">~Open</span>
+              </div>
+              <div class="functionality">
+                <span>Drive Thru</span>
+                <span>Take Out</span>
+                <span>Eat In</span>
+              </div>
+            </div>
+            <div class="right">
+              <button>
+                <img class="active" src="../../Assets/Icons/heart.png" alt="" />
+                <img src="../../Assets/Icons/heart-red.png" alt="" />
+              </button>
+            </div>
+          </div>
+          <div class="location-bottom">
+            <div class="order-menu">
+              <a href="">
+                <button class="location-offers">
+                  <img src="../../Assets/Icons/information.png" alt="" />
+                </button>
+                <span>Info</span>
+              </a>
+              <a href="">
+                <button class="location-order">
+                  <img src="../../Assets/Icons/burger.png" alt="" />
+                </button>
+                <span>Order</span>
+              </a>
+              <a href="">
+                <button class="location-info">
+                  <img src="../../Assets/Icons/order.png" alt="" />
+                </button>
+                <span>Offers</span>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <footer>
+      <div class="footer">
+        <div>
+          <a href="../Home/home.html">
+            <img src="../../Assets/Icons/home.png" alt="" />
+            <span>Home</span>
+          </a>
+        </div>
+        <div>
+          <a href="../Locations/">
+            <img src="../../Assets/Icons/menu.png" alt="" />
+            <span>Menu</span>
+          </a>
+        </div>
+        <div>
+          <a href="">
+            <img src="../../Assets/Icons/barcode.png" alt="" />
+            <span>My Code</span>
+          </a>
+        </div>
+        <div>
+          <a href="">
+            <img src="../../Assets/Icons/discount.png" alt="" />
+            <span>Offers</span>
+          </a>
+        </div>
+        <div>
+          <a href="">
+            <img src="../../Assets/Icons/badge.png" alt="" />
+            <span>Rewards</span>
+          </a>
+        </div>
+      </div>
+    </footer>
+    <!-- <header>
       <div class="navbar">
         <div class="top">
           <a class="burgermenu" href="">
@@ -64,6 +227,6 @@
         <div class="sides"></div>
         <div class="drinks-coffee"></div>
         <div class="condiments"></div>
-    </section>
+    </section> -->
   </body>
 </html>
