--- a/Client/Pages/Locations/location.html
+++ b/Client/Pages/Locations/location.html
@@ -18,7 +18,7 @@
   <body>
     <div class="location-navbar">
       <div class="nav">
-        <span>Locations</span>
+        <span>Pick Up</span>
         <a href="">
           <button>
             <img src="./../../Assets/Icons/location.png" alt="" />
@@ -70,10 +70,10 @@
               </div>
             </div>
             <div class="right">
-                <button>
-                  <img class="active" src="../../Assets/Icons/heart.png" alt="" />
-                  <img src="../../Assets/Icons/heart-red.png" alt="" />
-                </button>
+              <button>
+                <img class="active" src="../../Assets/Icons/heart.png" alt="" />
+                <img src="../../Assets/Icons/heart-red.png" alt="" />
+              </button>
             </div>
           </div>
           <div class="location-bottom">
@@ -114,10 +114,10 @@
               </div>
             </div>
             <div class="right">
-                <button>
-                  <img class="active" src="../../Assets/Icons/heart.png" alt="" />
-                  <img src="../../Assets/Icons/heart-red.png" alt="" />
-                </button>
+              <button>
+                <img class="active" src="../../Assets/Icons/heart.png" alt="" />
+                <img src="../../Assets/Icons/heart-red.png" alt="" />
+              </button>
             </div>
           </div>
           <div class="location-bottom">
