--- a/Client/Pages/Delivery/delivery.html
+++ b/Client/Pages/Delivery/delivery.html
@@ -25,10 +25,10 @@
         </a>
       </div>
     </div>
-    <section class="selectors">
+    <section class="delivery-selectors">
       <div class="selector">
         <div class="top">
-          <a class="pick-up" href="./location.html">
+          <a class="pick-up" href="../Locations/location.html">
             <button>Pick Up</button>
           </a>
           <a class="delivery" href="../Delivery/delivery.html">
@@ -40,7 +40,7 @@
         </div>
       </div>
     </section>
-    <section class="locations">
+    <section class="delivery-locations">
       <div class="top">
         <!-- without js in a tag -->
         <a href="">
