--- a/Client/Pages/Sign-in/signin.html
+++ b/Client/Pages/Sign-in/signin.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="../../SCSS/main.css" />
 </head>
 <body>
-    <header class="sign-up">
+    <header class="sign-in">
         <div>
           <a href="../Home/home.html">
             <button>
@@ -24,18 +24,18 @@
           </a>
         </div>
       </header>
-      <section class="section-signup">
+      <section class="section-signin">
         <div class="container">
           <h2>Sign In</h2>
-          <form class="signup-form">
+          <form class="signin-form">
             <input class="username" placeholder="Username"  type="text" id="username" name="username" required />
   
             <input class="password" placeholder="Password" type="Password" id="password" name="password" required />
   
-            <button class="signup-btn" type="submit">Sign In</button>
+            <button class="signin-btn" type="submit">Sign In</button>
           </form>
-          <p class="signup-link">
-            You have not account? <a href="../Sign-Up/signup.html">Sign Up</a>
+          <p class="signin-link">
+            Don't you have an account? <a href="../Sign-Up/signup.html">Sign Up</a>
           </p>
         </div>
       </section>
