--- a/Client/Pages/Locations/location.html
+++ b/Client/Pages/Locations/location.html
@@ -26,7 +26,7 @@
         </a>
       </div>
     </div>
-    <section class="selectors">
+    <section class="location-selectors">
       <div class="selector">
         <div class="top">
           <a class="pick-up" href="./location.html">
@@ -41,7 +41,7 @@
         </div>
       </div>
     </section>
-    <section class="locations">
+    <section class="location-locations">
       <div class="top">
         <!-- without js in a tag -->
         <a href="">
